--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.0.13
   http: ^0.13.4
   mask_text_input_formatter: ^2.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
