--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.4
   mask_text_input_formatter: ^2.1.0
   intl: ^0.17.0
+  flutter_typeahead: ^3.2.4
 
 dev_dependencies:
   flutter_test:
